--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,12 +4,57 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>{% block title %}Propel - Blog Application{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" />
+            <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
+        {% endblock %}
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block body %}
+            {% block menu %}
+                <nav class="navbar navbar-fixed-top">
+                    <div class="navbar-inner">
+                        <div class="container">
+                            <a class="brand" href="{{ url('_welcome') }}">Propel ACL Demo</a>
+                            <ul class="nav">
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li class="first"><a href="{{ url('_posts') }}">Posts</a></li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Library <b class="caret"></b></a>
+                                    <ul class="dropdown-menu">
+                                        <li class="first"><a href="{{ url('books') }}">List Books</a></li>
+                                        <li class="first"><a href="{{ url('book_new') }}">New Book</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                            <p class="navbar-text pull-right">Logged in as <a title="Logout" href="{{ url('logout') }}">{{ app.security.token.username }}</a></p>
+                            {% else %}
+                            <p class="navbar-text pull-right"><a href="{{ url('login') }}">Login</a></p>
+                            {% endif %}
+                        </div>
+                    </div>
+                </nav>
+            {% endblock %}
+
+            {% block container %}
+                <div class="container">
+                    <div class="row">
+                        <div class="span12">{% block content %}{% endblock %}</div>
+                    </div>
+                </div>
+            {% endblock %}
+        {% endblock %}
+        {% block javascripts %}
+            <script src="{{ asset('js/jquery.js') }}"></script>
+            <script src="{{ asset('js/bootstrap.js') }}"></script>
+            <script src="{{ asset('js/application.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
 {% endspaceless %}
