--- a/src/Acme/LibraryBundle/Resources/views/Book/list.html.twig
+++ b/src/Acme/LibraryBundle/Resources/views/Book/list.html.twig
@@ -7,6 +7,7 @@
                 <tr>
                     <th>Title</th>
                     <th>ISBN</th>
+                    <th>Author</th>
                 </tr>
             </thead>
             <tbody>
@@ -14,6 +15,7 @@
                 <tr>
                     <td>{{ book.title }}</td>
                     <td>{{ book.isbn }}</td>
+                    <td>{{ book.author|default('Unknown') }}</td>
                 </tr>
             {% endfor %}
             </tbody>
